--- a/SachinPC/index.html
+++ b/SachinPC/index.html
@@ -26,13 +26,6 @@
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 <div class="container">
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-		<i class="fa fa-bars"></i>
-		</button>
-		<a class="navbar-brand page-scroll" href="index.html">
-		ARIES </a>
-	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
@@ -60,9 +53,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">THIS IS ARIES</h1>
+				<h1 class="brand-heading">Sachin PC</h1>
 				<p class="intro-text">
-					FREE TEMPLATE BY WOWTHEMES.NET
+					#Python Developer #Data Enthusiast
 				</p>
 				<a href="#about" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -79,7 +72,11 @@
 		<h2>LIL' ABOUT ME</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p>
-				Praesent ac dignissim diam. Aliquam lobortis elit et sapien eleifend, at sollicitudin metus elementum. Morbi imperdiet id ipsum at tristique. Nam suscipit tristique sem, <a href="#">quis</a> laoreet leo. Maecenas eget ante ipsum.
+				I am Sachin PC, a programmer with a keen eye for latest trends in the digital world.
+				I am also a Pythonista and a Data enthusiast. When I am free, I am exploring new modules on python that can charge up my brain cells and excite me.
+				I always fantasized about being a superhero and help solve some of the toughest problems the world faces.
+				Little did I know that fooling around with "Data" could help me do the same - and I did not have to get bitten by a spider or get exposed to toxic waste.
+				This turned me into a data enthusiast. In other words, data gets me all excited and turned on (Yeaaah, I know what you are thinking, you perv !!! ).
 			</p>
 			<p>
 				<a href="#" class="btnghost"><i class="fa fa-download"></i> Curriculum Vitae</a>
