--- a/SachinPC/index.html
+++ b/SachinPC/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ARIES - Free Bootstrap Theme by WowThemes.net</title>
+<title>Sachin PC</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -33,13 +33,10 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Single Project</a>
+			<a href="page-sample.html">Projects</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Page Sample</a>
-			</li>
-			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="contact.html">Contact Me</a>
 			</li>
 		</ul>
 	</div>
@@ -93,61 +90,73 @@
 		<img src="http://unsplash.it/680/380?random=1" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=2" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=3" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a class="image" href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=4" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=5" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=6" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=7" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=8" alt="">
 		</a>
 		</li>
-				<li class="col-md-3">
+
+		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=10" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=11" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=12" alt="">
 		</a>
 		</li>
+
 		<li class="col-md-3">
 		<a href="portfolio-item.html">
 		<img src="http://unsplash.it/680/380?random=13" alt="">
 		</a>
 		</li>
+
 	</ul>
 </div>
 </section>
