Contact Me updated with links and details
Linkedin
Github

--- a/SachinPC/contact.html
+++ b/SachinPC/contact.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>ARIES - Free Bootstrap Theme by WowThemes.net</title>
+<title>Contact Me - Sachin PC</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -39,13 +39,7 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Singe Project</a>
-			</li>
-			<li>
 			<a href="page-sample.html">Page Sample</a>
-			</li>
-			<li>
-			<a href="contact.html">Hire me</a>
 			</li>
 		</ul>
 	</div>
@@ -60,12 +54,11 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">Get in Touch</h1>
-				<p class="intro-text">
-					The contact form is Workin'!
+				<p>
+					<a href="#contact" class="btn btn-circle page-scroll">
+					<i class="fa fa-angle-double-down animated"></i>
+					</a>
 				</p>
-				<a href="#contact" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
 			</div>
 		</div>
 	</div>
@@ -73,23 +66,18 @@
 </header>
 <!-- Contact Section -->
 <section id="contact">
-<div class="container content-section">
+<div class="container content-section text-center">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2">
-			<div class="done">
-				<div class="alert alert-success">
-					<button type="button" class="close" data-dismiss="alert">×</button>
-					Your message has been sent. Thank you!
+			<h5>Email : sachinpc.1993@live.com</h5>
+			<h5>Mobile : +450119551</h5>
+			<h5>Other Mobile: +91 9600889551</h5>
+				<div class="logo"  >
+					<p>
+						<a href="https://www.linkedin.com/in/sachinpc" target="_blank"><img src="img/LinkedinBlack.png" alt="Linkedin Logo"></a>
+						<a href="https://github.com/sachinpc1993" target="_blank"><img src="img/GithubinBlack.png" alt="github Logo"></a>
+					</p>
 				</div>
-			</div>
-			<form method="post" action="contact.php" id="contactform">
-				<div class="form">
-					<input type="text" name="name" placeholder="Your Name *">
-					<input type="text" name="email" placeholder="Your E-mail Address *">
-					<textarea name="comment" rows="7" placeholder="Type your Message *"></textarea>
-					<input type="submit" id="submit" class="clearfix btn" value="Send">
-				</div>
-			</form>
 		</div>
 	</div>
 </div>
@@ -98,8 +86,8 @@
 <footer>
 <div class="container text-center">
 	<p class="credits">
-		Copyright &copy; Your Website 2015<br/>
-		"Aries" Template by WowThemes.net
+		<!-- TODO -->
+		<!-- Copyright &copy; Your Website 2018<br/> -->
 	</p>
 </div>
 </footer>
