--- a/SachinPC/page-sample.html
+++ b/SachinPC/page-sample.html
@@ -26,27 +26,15 @@
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 <div class="container">
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-		<i class="fa fa-bars"></i>
-		</button>
-		<a class="navbar-brand page-scroll" href="index.html">
-		ARIES </a>
-	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
 			<a href="index.html">Home</a>
 			</li>
+
 			<li>
-			<a href="portfolio-item.html">Singe Project</a>
-			</li>
-			<li>
-			<a href="page-sample.html">Page Sample</a>
-			</li>
-			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="contact.html">Contact Me</a>
 			</li>
 		</ul>
 	</div>
