--- a/SachinPC/index.html
+++ b/SachinPC/index.html
@@ -52,7 +52,7 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">Sachin PC</h1>
 				<p class="intro-text">
-					 #Python Developer #Data Enthusiast
+					 <b>#Python Developer #Data Enthusiast</b>
 				</p>
 				<a href="#about" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
